<resources>
    <string name="app_name">Mountain Trekking Advisor</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="loading">Loading Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pseudo_para">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</string>

    <string name="policy">
        <b>1. Dịch vụ của chúng tôi</b>\n\nChúng tôi mang đến cho bạn ứng dụng <b>MTA</b>, một ứng dụng hỗ trợ cộng đồng phượt và leo núi với các chức năng chia sẻ trong cộng đồng và xây dựng cũng như theo dõi kế hoạch nhằm giúp chuyến đi của bạn đạt hiệu quả cao hơn.\n\n
        <b>2. Chính sách dữ liệu và bảo mật</b>\n\nChúng tôi thu thập thông tin về <u>ngày sinh</u>, <u>tên</u> và <u>số điện thoại</u> của bạn nhằm đem lại sự hiệu quả trong quản lý và nâng cao độ tin cậy của cộng đồng.
        \n\n<u>Tên</u> của bạn được công khai bởi tất cả người sử dụng MTA.
        \n<u>Ngày sinh</u> của bạn được hoàn toàn giữ bí mật.
        \n<u>Số điện thoại</u> của bạn sẽ được chia sẻ với các thành viên trong nhóm khi bạn tham gia bất kì một kế hoạch nào đã được tạo.\n\n
        <b>3. Quyền hạn của bạn</b>\n\n
        <u>Quyền hạn</u>: Bạn có quyền sử dụng tất cả chức năng như một người dùng bình thường sau khi đã đăng ký tài khoản bao gồm:\n
        - Xem các thông tin về địa điểm thuộc cơ sở dữ liệu của chúng tôi.\n
        - Được tham gia viết bài và bình luận theo các mục thảo luận và từng địa điểm.\n
        - Báo cáo các hành vi không chuẩn mực giữa các thành viên trong cộng đồng thông qua hình thức tố cáo bình luận và bài viết.\n
        - Lập lịch và lên kế hoạch cho chuyến đi của bạn.\n
        - Được phép xem tất cả các kế hoạch đang công khai và đăng ký tham gia.\n
        - Mời bất kỳ thành viên nào không bị khóa tài khoản vào kế hoạch của bản thân.\n\n
        <b>4. Giới hạn trách nhiệm của chúng tôi</b>\n\nChúng tôi không chịu trách nhiệm giải quyết các vấn đề trong các trường hợp sau:\n
        - Không giải quyết các mâu thuẫn ngoài phạm vi cộng đồng mạng như việc tố cáo các hành vi vi phạm pháp luật hay tranh chấp cá nhân.\n
        - Không chịu trách nhiệm giải quyết các tổn hại thực tế của người sử dụng trong các chuyến đi.\n
        - Không đảm bảo những thông tin người dùng đăng lên là hoàn toàn đúng sự thật ngoài nhưng thông tin do chính chúng tôi cung cấp như thông tin, địa chỉ và nhứng thống kê trên ứng dụng về địa điểm.\n
    </string>

    <string-array name="category">
        <item>Chuyên mục khác</item>
        <item>Tất cả</item>
        <item>Hỏi đáp</item>
        <item>Tìm bạn</item>
    </string-array>
    <string name="title_activity_place_detail">PlaceDetailActivity</string>

    <string name="title_post">Bài đăng</string>
    <string name="title_place">Địa điểm</string>
    <string name="title_newsfeed">Bảng tin</string>
    <string name="title_plan">Kế hoạch</string>
    <string name="title_notification">Thông báo</string>
    <string name="title_message">Tin nhắn</string>
    <string name="title_search">Tìm kiếm</string>
    <string name="title_register">Đăng ký</string>
    <string name="title_forgot_password">Quên mật khẩu</string>

    <string name="button_next">Tiếp</string>
    <string name="button_register">Đăng ký</string>
    <string name="button_submit">Gửi</string>

    <string name="helper_firstname">Nhập họ của bạn</string>
    <string name="helper_lastname">Nhập tên của bạn</string>
    <string name="helper_birthdate">Chọn ngày sinh</string>
    <string name="helper_gender">Giới tính</string>
    <string name="helper_email">Tên tài khoản</string>
    <string name="helper_password">Mật khẩu ít nhất 8 kí tự trở lên</string>

    <string name="hint_firstname">Họ</string>
    <string name="hint_lastname">Tên</string>
    <string name="hint_birthdate">Ngày sinh</string>
    <string name="hint_email">Địa chỉ email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_repassword">Nhập lại mật khẩu</string>
    <string name="hint_male">Nam</string>
    <string name="hint_female">Nữ</string>
    <string name="hint_show_password">Hiện mật khẩu</string>

    <string name="error_firstname">Hãy nhập họ của bạn</string>
    <string name="error_lastname">Hãy nhập tên của bạn</string>
    <string name="error_birthdate_empty">Hãy nhập ngày sinh</string>
    <string name="error_birthdate_restrict">Nguời dùng phải trên 13 tuổi</string>
    <string name="error_birthdate_format">Sai định dạng</string>
    <string name="error_gender">Chọn giới tính</string>
    <string name="error_email_empty">Hãy nhập email của bạn</string>
    <string name="error_email_format">Sai định dạng</string>
    <string name="error_password">Mật khẩu quá ngắn</string>
    <string name="error_repassword">Nhập lại chưa chính xác</string>
    <string name="title_activity_maps">Map</string>
    <string name="app_label">MTA</string>
    <string name="search_hint">Nhập từ khóa</string>
    <string name="title_checklist">Danh sách đầu việc</string>
    <string name="title_timelines">Thời gian biểu</string>
    <string name="title_add_post">Tạo bài viết</string>
    <string name="title_post_detail">Bài viết</string>
    <string name="title_settings">Tùy chỉnh</string>
    <string name="hint_new_password">Mật khẩu mới</string>
</resources>
