<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/firstnameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/colorTextFieldLabel"
        android:transitionGroup="true"
        app:hintTextAppearance="@style/TextInputLayoutStyle"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:errorTextAppearance="@style/ErrorStyle"
        app:helperTextEnabled="true"
        app:helperText="@string/helper_firstname">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtFirstname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/hint_firstname"
            android:textSize="13sp"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorTextFieldInput"
            android:textCursorDrawable="@drawable/input_cursor"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/lastnameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/colorTextFieldLabel"
        android:transitionGroup="true"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/TextInputLayoutStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstnameLayout"
        app:errorTextAppearance="@style/ErrorStyle"
        app:helperTextEnabled="true"
        app:helperText="@string/helper_lastname">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtLastname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/hint_lastname"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="13sp"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorTextFieldInput"
            android:textCursorDrawable="@drawable/input_cursor"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/birthdateLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/colorTextFieldLabel"
        android:transitionGroup="true"
        app:layout_constraintTop_toBottomOf="@id/lastnameLayout"
        app:layout_constraintEnd_toStartOf="@id/radGroupGender"
        app:layout_constraintStart_toStartOf="parent"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/TextInputLayoutStyle"
        app:errorTextAppearance="@style/ErrorStyle"
        app:helperTextEnabled="true"
        app:helperText="@string/helper_birthdate">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtDoB"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="@color/colorGreyHint"
            android:hint="@string/hint_birthdate"
            android:inputType="date"
            android:singleLine="true"
            android:textSize="13sp"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorTextFieldInput"
            android:focusable="false"
            android:textCursorDrawable="@drawable/input_cursor"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/genderLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:transitionGroup="true"
        app:layout_constraintStart_toStartOf="@id/radGroupGender"
        app:layout_constraintEnd_toEndOf="@id/radGroupGender"
        app:layout_constraintTop_toTopOf="@id/birthdateLayout"
        app:layout_constraintBottom_toBottomOf="@id/birthdateLayout"
        android:background="@android:color/white"
        app:errorTextAppearance="@style/ErrorStyle"
        app:helperTextEnabled="true"
        app:helperText="@string/helper_gender">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="13sp"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:focusable="false" />

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/radGroupGender"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@id/birthdateLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/birthdateLayout"
        app:layout_constraintBottom_toBottomOf="@id/birthdateLayout">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextFieldLabel"
            android:text="@string/hint_male"
            android:textSize="13sp"
            android:theme="@style/RadioStyle"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="8dp"/>
        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextFieldLabel"
            android:text="@string/hint_female"
            android:textSize="13sp"
            android:theme="@style/RadioStyle"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="8dp"/>
    </RadioGroup>


</android.support.constraint.ConstraintLayout>